--- a/loos.dox
+++ b/loos.dox
@@ -2621,7 +2621,7 @@ connected to a given atom.  Also, atomid's can be non-contiguous to
 indicate logical groupings, for example, nor are they required to
 begin with 1.
 
-<DT> How have atomid's changed in LOOS since release 2.0.6?
+<DT> How have atomid's changed in LOOS in release 2.1.0?
 <DD> Previously, LOOS treated atomid's as special when reading a
 trajectory.  The atomid was the index into the trajectory frame for
 the corresponding atom.  This required models to have contiguous
