--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-10-18    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed bug in svd tool where basic options (such as -v1) would
+	fail with an options error.
+
 2013-10-17    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Changed Matrix operator[] to only check for out of bounds index
@@ -7,7 +12,7 @@
 
 	* Added Math::eigenDecomp() that calculates the eigenpairs for
 	the passed DoubleMatrix (using DSYEV).
-	* Added gnm-traj and anm-traj tools for analyzing trajectories
+	* Added gnm-traj and anmo-traj tools for analyzing trajectories
 	using elastic network models.
 
 2013-10-08    <tromo@hill.urmc-sh.rochester.edu>
